--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -2288,6 +2288,7 @@ $calendar-nav-padding:                       .5rem !default;
 $calendar-nav-border-width:                  1px !default;
 $calendar-nav-border-color:                  var(--#{$prefix}border-color) !default;
 $calendar-nav-date-color:                    var(--#{$prefix}body-color) !default;
+$calendar-nav-date-font-weight:              600 !default;
 $calendar-nav-date-hover-color:              var(--#{$prefix}primary) !default;
 $calendar-nav-icon-width:                    1rem !default;
 $calendar-nav-icon-height:                   1rem !default;
@@ -2299,8 +2300,14 @@ $calendar-nav-icon-double-prev:              url("data:image/svg+xml,<svg xmlns=
 $calendar-nav-icon-next:                     url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512' role='img'><polygon fill='#000' points='179.313 451.313 156.687 428.687 329.372 256 156.687 83.313 179.313 60.687 374.627 256 179.313 451.313'></polygon></svg>") !default;
 $calendar-nav-icon-prev:                     url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512' role='img'><polygon fill='#000' points='324.687 451.313 129.373 256 324.687 60.687 347.313 83.313 174.628 256 347.313 428.687 324.687 451.313'></polygon></svg>") !default;
 
-$calendar-cell-header-inner-color:           var(--#{$prefix}secondary-color) !default;
+$calendar-rows-gap:                          2px !default;
+
+$calendar-cell-header-color:                 var(--#{$prefix}secondary-color) !default;
+$calendar-cell-header-font-weight:           600 !default;
+$calendar-cell-header-selected-color:        $white !default;
+
 $calendar-cell-week-number-color:            var(--#{$prefix}secondary-color) !default;
+$calendar-cell-week-number-font-weight:      600 !default;
 
 $calendar-cell-hover-color:                  var(--#{$prefix}body-color) !default;
 $calendar-cell-hover-bg:                     var(--#{$prefix}tertiary-bg) !default;
