--- a/scss/_dropdown.scss
+++ b/scss/_dropdown.scss
@@ -3,6 +3,7 @@
 @use "mixins/box-shadow" as *;
 @use "mixins/breakpoints" as *;
 @use "mixins/caret" as *;
+@use "mixins/elevation" as *;
 @use "mixins/gradients" as *;
 @use "mixins/ltr-rtl" as *;
 @use "vendor/rfs" as *;
