--- a/scss/mixins/_elevation.scss
+++ b/scss/mixins/_elevation.scss
@@ -1,3 +1,5 @@
+@use "../variables" as *;
+
 @mixin elevation($value, $exclude: null) {
   @if $enable-elevations {
     box-shadow: map-get($elevations, $value);
