--- a/scss/_card.scss
+++ b/scss/_card.scss
@@ -1,6 +1,7 @@
 @use "mixins/border-radius" as *;
 @use "mixins/box-shadow" as *;
 @use "mixins/breakpoints" as *;
+@use "mixins/elevation" as *;
 @use "mixins/ltr-rtl" as *;
 @use "variables" as *;
 
