--- a/scss/_date-picker.scss
+++ b/scss/_date-picker.scss
@@ -1,3 +1,13 @@
+@use "functions/escape-svg" as *;
+@use "mixins/border-radius" as *;
+@use "mixins/box-shadow" as *;
+@use "mixins/breakpoints" as *;
+@use "mixins/elevation" as *;
+@use "mixins/ltr-rtl" as *;
+@use "mixins/transition" as *;
+@use "vendor/rfs" as *;
+@use "variables" as *;
+
 .date-picker,
 *:not(.date-picker) > .date-picker-dropdown {
   // scss-docs-start date-picker-css-vars
