--- a/scss/_modal.scss
+++ b/scss/_modal.scss
@@ -4,6 +4,7 @@
 @use "mixins/border-radius" as *;
 @use "mixins/box-shadow" as *;
 @use "mixins/breakpoints" as *;
+@use "mixins/elevation" as *;
 @use "mixins/ltr-rtl" as *;
 @use "mixins/transition" as *;
 @use "variables" as *;
