--- a/scss/forms/_form-multi-select.scss
+++ b/scss/forms/_form-multi-select.scss
@@ -1,3 +1,11 @@
+@use "../mixins/border-radius" as *;
+@use "../mixins/box-shadow" as *;
+@use "../mixins/elevation" as *;
+@use "../mixins/ltr-rtl" as *;
+@use "../mixins/transition" as *;
+@use "../vendor/rfs" as *;
+@use "../variables" as *;
+
 .form-multi-select,
 *:not(.form-multi-select) > .form-multi-select-dropdown {
   // scss-docs-start form-multi-select-css-vars
