--- a/scss/sidebar/_sidebar.scss
+++ b/scss/sidebar/_sidebar.scss
@@ -3,6 +3,7 @@
 @use "../mixins/backdrop" as *;
 @use "../mixins/border-radius" as *;
 @use "../mixins/breakpoints" as *;
+@use "../mixins/elevation" as *;
 @use "../mixins/ltr-rtl" as *;
 @use "../mixins/transition" as *;
 @use "../variables" as *;
