--- a/scss/mixins/_elevation.scss
+++ b/scss/mixins/_elevation.scss
@@ -1,8 +1,9 @@
+@use "sass:map";
 @use "../variables" as *;
 
 @mixin elevation($value, $exclude: null) {
   @if $enable-elevations {
-    box-shadow: map-get($elevations, $value);
+    box-shadow: map.get($elevations, $value);
 
     @if $enable-dark-mode {
       [data-coreui-theme]:not([data-coreui-theme="dark"]) & {
