--- a/scss/helpers/_color-bg.scss
+++ b/scss/helpers/_color-bg.scss
@@ -1,3 +1,4 @@
+@use "sass:map";
 @use "../functions/color" as *;
 @use "../functions/color-contrast" as *;
 @use "../functions/to-rgb" as *;
@@ -14,7 +15,7 @@
 
 @each $color, $value in $theme-gradients {
   .text-bg-#{$color}-gradient {
-    color: color-contrast(map-get($value, "start")) if($enable-important-utilities, !important, null);
+    color: color-contrast(map.get($value, "start")) if($enable-important-utilities, !important, null);
     background-color: var(--#{$prefix}#{$color});
     background-image: linear-gradient(45deg, var(--#{$prefix}#{$color}-start) 0%, var(--#{$prefix}#{$color}-stop) 100%);
   }
@@ -32,7 +33,7 @@
 
     @each $color, $value in $theme-gradients-dark {
       .text-bg-#{$color}-gradient {
-        color: color-contrast(map-get($value, "start")) if($enable-important-utilities, !important, null);
+        color: color-contrast(map.get($value, "start")) if($enable-important-utilities, !important, null);
       }
     }
   }
