--- a/scss/coreui.scss
+++ b/scss/coreui.scss
@@ -47,6 +47,7 @@
 @forward "footer";
 @forward "header";
 @forward "icon";
+@forward "loading-button";
 @forward "range-slider";
 @forward "rating";
 @forward "sidebar";
