feat(InputGroup): add support for DatePicker, DateRangePicker, TimePicker, and MultiSelect

--- a/scss/forms/_input-group.scss
+++ b/scss/forms/_input-group.scss
@@ -19,6 +19,9 @@
   }
 
   // Bring the "active" form control to the top of surrounding elements
+  > .date-picker.show,
+  > .time-picker.show,
+  > .form-multi-select.show,
   > .form-control:focus,
   > .form-select:focus,
   > .form-floating:focus-within {
@@ -98,6 +101,9 @@
 // stylelint-disable-next-line no-duplicate-selectors
 .input-group {
   &:not(.has-validation) {
+    > .date-picker > .date-picker-input-group,
+    > .time-picker > .time-picker-input-group,
+    > .form-multi-select > .form-multi-select-input-group,
     > :not(:last-child):not(.dropdown-toggle):not(.dropdown-menu):not(.form-floating),
     > .dropdown-toggle:nth-last-child(n + 3),
     > .form-floating:not(:last-child) > .form-control,
@@ -107,6 +113,9 @@
   }
 
   &.has-validation {
+    > .date-picker > .date-picker-input-group,
+    > .time-picker > .time-picker-input-group,
+    > .form-multi-select > .form-multi-select-input-group,
     > :nth-last-child(n + 3):not(.dropdown-toggle):not(.dropdown-menu):not(.form-floating),
     > .dropdown-toggle:nth-last-child(n + 4),
     > .form-floating:nth-last-child(n + 3) > .form-control,
@@ -125,6 +134,9 @@
     @include border-start-radius(0);
   }
 
+  > .date-picker > .date-picker-input-group,
+  > .time-picker > .time-picker-input-group,
+  > .form-multi-select > .form-multi-select-input-group,
   > .form-floating:not(:first-child) > .form-control,
   > .form-floating:not(:first-child) > .form-select {
     @include border-start-radius(0);
