--- a/scss/mixins/_elevation.scss
+++ b/scss/mixins/_elevation.scss
@@ -6,7 +6,7 @@
     box-shadow: map.get($elevations, $value);
 
     @if $enable-dark-mode {
-      [data-coreui-theme]:not([data-coreui-theme="dark"]) & {
+      [data#{$data-infix}theme]:not([data#{$data-infix}theme="dark"]) & {
         &:not([class*="border"]) {
           border: 0;
         }
