fix(MultiSelect): fix the incorrect border radius value when component is inside the input group.

--- a/scss/forms/_input-group.scss
+++ b/scss/forms/_input-group.scss
@@ -145,7 +145,7 @@
 
   > .date-picker:not(:first-child) > .date-picker-input-group,
   > .time-picker:not(:first-child) > .time-picker-input-group,
-  > .form-multi-select:not(:first-child) > .form-multi-select-input-group,
+  > .form-multi-select:not(:first-child) > .form-multi-select .form-multi-select-input-group,
   > .form-floating:not(:first-child) > .form-control,
   > .form-floating:not(:first-child) > .form-select,
   > .form-password:not(:first-child) > .form-control {
