feat(PasswordInput): new component release

--- a/scss/_forms.scss
+++ b/scss/_forms.scss
@@ -1,6 +1,7 @@
 @forward "forms/labels";
 @forward "forms/form-text";
 @forward "forms/form-control";
+@forward "forms/form-password";
 @forward "forms/form-select";
 @forward "forms/form-multi-select";
 @forward "forms/form-check";
