--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -2594,3 +2594,39 @@ $rating-item-scale-transform:  scale(1.2) !default;
 $rating-item-active-color:     var(--#{$prefix}warning) !default;
 $rating-item-icon:             url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'%3E%3Cpath fill='currentColor' d='M470.935,194.043,333.8,171.757,270.227,48.22a16,16,0,0,0-28.454,0L178.2,171.757,41.065,194.043A16,16,0,0,0,32.273,221.1l97.845,98.636L108.936,457.051a16,16,0,0,0,23.02,16.724L256,411.2l124.044,62.576a16,16,0,0,0,23.02-16.724L381.882,319.74,479.727,221.1A16,16,0,0,0,470.935,194.043Z'%3E%3C/path%3E%3C/svg%3E") !default;
 // scss-docs-end rating-variables
+
+// Stepper
+// scss-docs-start stepper-variables
+$stepper-steps-gap:                             .5rem !default;
+$stepper-step-gap:                              .5rem !default;
+$stepper-step-button-width:                     8rem !default;
+$stepper-step-button-color:                     var(--#{$prefix}secondary-color) !default;
+$stepper-step-button-active-color:              var(--#{$prefix}secondary-color) !default;
+$stepper-step-button-complete-color:            var(--#{$prefix}secondary-color) !default;
+$stepper-step-button-disabled-color:            var(--#{$prefix}secondary-color) !default;
+$stepper-step-indicator-width:                  2rem !default;
+$stepper-step-indicator-height:                 2rem !default;
+$stepper-step-indicator-color:                  var(--#{$prefix}secondary) !default;
+$stepper-step-indicator-bg:                     transparent !default;
+$stepper-step-indicator-border-width:           var(--#{$prefix}border-width) !default;
+$stepper-step-indicator-border-color:           var(--#{$prefix}border-color) !default;
+$stepper-step-indicator-transition:             color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out !default;
+$stepper-step-indicator-active-color:           var(--#{$prefix}primary) !default;
+$stepper-step-indicator-active-bg:              rgba(var(--#{$prefix}primary-rgb), .05) !default;
+$stepper-step-indicator-active-border-color:    var(--#{$prefix}primary) !default;
+$stepper-step-indicator-complete-color:         var(--#{$prefix}white) !default;
+$stepper-step-indicator-complete-bg:            var(--#{$prefix}primary) !default;
+$stepper-step-indicator-complete-border-color:  var(--#{$prefix}primary) !default;
+$stepper-step-indicator-focus-box-shadow:       $focus-ring-box-shadow !default;
+$stepper-step-indicator-icon:                   url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'%3E%3Cpolygon fill='var(--ci-primary-color, currentColor)' points='200.359 382.269 61.057 251.673 82.943 228.327 199.641 337.731 428.686 108.687 451.314 131.313 200.359 382.269' class='ci-primary'/%3E%3C/svg%3E") !default;
+$stepper-step-indicator-icon-color:             var(--#{$prefix}white) !default;
+$stepper-step-indicator-icon-size:              1rem !default;
+
+$stepper-step-connector-height:                 .125rem !default;
+$stepper-step-connector-gap:                    1rem !default;
+$stepper-step-connector-bg:                     var(--#{$prefix}secondary-bg) !default;
+$stepper-step-connector-complete-bg:            var(--#{$prefix}primary) !default;
+$stepper-step-connector-transition:             background-color .15s ease-in-out !default;
+
+$stepper-step-content-transition:               height .3s ease-in-out !default;
+// scss-docs-end stepper-variables
