--- a/docs/layouts/partials/banner.html
+++ b/docs/layouts/partials/banner.html
@@ -5,7 +5,7 @@
       <img src="https://coreui.io/images/frameworks/core_blue_960px.png" class="img-fluid" width="160px" height="160px" alt="CoreUI PRO hexagon">
     </div>
     <div class="col-md col-12 px-lg-4">This component is part of CoreUI PRO – a powerful UI library with over 250 components and 25+ templates, designed to help you build modern, responsive apps faster. Fully compatible with Angular, Bootstrap, React.js, and Vue.js.</div>
-    <div class="col-md-auto col-12 mt-3 mt-lg-0"><a class="btn btn-danger text-nowrap text-white" href="https://coreui.io/pricing/?src=coreui-docs&cta=pro-banner">Get CoreUI PRO</a></div>
+    <div class="col-md-auto col-12 mt-3 mt-lg-0"><a class="btn btn-danger text-nowrap text-white" href="https://coreui.io/bootstrap/docs/pricing/?src=coreui-docs&cta=pro-banner">Get CoreUI PRO</a></div>
   </div>
 </div>
 {{ end }}
